[gd_scene load_steps=5 format=3 uid="uid://cjecvco7nd4tp"]

[ext_resource type="Script" uid="uid://ck6p0j4o2crxq" path="res://assets/ui/exit_dialog.gd" id="1_qmujf"]

[sub_resource type="Theme" id="Theme_bfg35"]
default_font_size = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qmujf"]

[sub_resource type="Theme" id="Theme_qmujf"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_qmujf")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_bfg35")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_qmujf")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -402.5
offset_top = -141.5
offset_right = 402.5
offset_bottom = 141.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_qmujf")
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="Control/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Вы уверены, что хотите выйти?"
horizontal_alignment = 1

[node name="ButtonConfirm" type="Button" parent="Control/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath("../ButtonCancel")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "ДА"

[node name="ButtonCancel" type="Button" parent="Control/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = " ОТМЕНА "

[connection signal="pressed" from="Control/MarginContainer/Panel/VBoxContainer/ButtonConfirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Panel/VBoxContainer/ButtonCancel" to="." method="_on_cancel_pressed"]
